# cmake-dependency-provider

./: README.md  dep_provider.cmake
example/: CMakeLists.txt  main.cpp
